# eastwood

./: .gitmodules  CMakeLists.txt  LICENSE  Setup.sh
eastwood/: CMakeLists.txt  main.cpp
eastwood/core/: Eastwood.cpp  Eastwood.h  RenderPlatform.cpp  RenderPlatform.h  WindowManager.cpp  WindowManager.h
